--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="og:author" content="Oluwatomisola Solomon" />
+    <meta name="og:image" content="https://portfolio-tomisola1.vercel.app/static/media/HeroImage.90fdfb7f70c7b9c24d4d.png" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="og:description"
+      content="About me"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
